<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		profile
	 *	@date 		1657543253110
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/favorite" 
		android:layout_width="394dp"
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_favorite_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__favorite_ek2"
					android:background="@drawable/_bg__favorite_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="394dp"
					android:layout_height="896dp" />


				<RelativeLayout android:id="@+id/back_arrow"
					android:layout_marginTop="54dp"
					android:layout_marginStart="10dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/vector_ek8"
						android:src="@drawable/vector_ek8"
						android:contentDescription="vector_ek8"
						 android:layout_marginStart="5dp"
						android:layout_marginTop="12dp"
						android:layout_width="14dp"
						android:layout_height="0dp" />

					<ImageView android:id="@+id/vector_ek9"
						android:src="@drawable/vector_ek9"
						android:contentDescription="vector_ek9"
						 android:layout_marginStart="5dp"
						android:layout_marginTop="5dp"
						android:layout_width="7dp"
						android:layout_height="14dp" />

				</RelativeLayout>

				<TextView android:id="@+id/liked_songs"
					android:fontFamily="@font/poppins_bold"
					android:textStyle="bold"
					android:textSize="18sp"
					android:textColor="@color/settings_color"
					android:layout_marginLeft="20dp"
					android:layout_marginTop="550dp"
					android:layout_width="133dp"
					android:layout_height="40dp"
					android:text="@string/liked_songs_string"
					 />


				<RelativeLayout android:id="@+id/component_2"
					android:layout_marginTop="611dp"
					android:layout_marginStart="30dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/chicago_freestyle___drake"
						android:fontFamily="@font/poppins_bold"
						android:textStyle="bold"
						android:textSize="18sp"
						android:textColor="@color/settings_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="268.89dp"
						android:layout_height="40dp"
						android:text="@string/chicago_freestyle___drake_string"
						 />

					<TextView android:id="@+id/drake"
						android:fontFamily="@font/poppins_regular"
						android:textSize="14sp"
						android:textColor="@color/settings_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="19dp"
						android:layout_width="88.67dp"
						android:layout_height="31dp"
						android:text="@string/drake_string"
						 />

					<ImageView android:id="@+id/darklane4"
						android:src="@drawable/darklane4"
						android:contentDescription="darklane4"
						 android:layout_marginStart="287.9dp"
						android:layout_marginTop="0dp"
						android:layout_width="46.1dp"
						android:layout_height="38dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/component_3"
					android:layout_marginTop="665dp"
					android:layout_marginStart="30dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/chicago_freestyle___drake_ek1"
						android:fontFamily="@font/poppins_bold"
						android:textStyle="bold"
						android:textSize="18sp"
						android:textColor="@color/settings_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="268.89dp"
						android:layout_height="40dp"
						android:text="@string/chicago_freestyle___drake_ek1_string"
						 />

					<TextView android:id="@+id/drake_ek1"
						android:fontFamily="@font/poppins_regular"
						android:textSize="14sp"
						android:textColor="@color/settings_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="19dp"
						android:layout_width="88.67dp"
						android:layout_height="31dp"
						android:text="@string/drake_ek1_string"
						 />

					<ImageView android:id="@+id/darklane3"
						android:src="@drawable/darklane3"
						android:contentDescription="darklane3"
						 android:layout_marginStart="287.9dp"
						android:layout_marginTop="0dp"
						android:layout_width="46.1dp"
						android:layout_height="38dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/component_4"
					android:layout_marginTop="719dp"
					android:layout_marginStart="30dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/chicago_freestyle___drake_ek2"
						android:fontFamily="@font/poppins_bold"
						android:textStyle="bold"
						android:textSize="18sp"
						android:textColor="@color/settings_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="268.89dp"
						android:layout_height="40dp"
						android:text="@string/chicago_freestyle___drake_ek2_string"
						 />

					<TextView android:id="@+id/drake_ek2"
						android:fontFamily="@font/poppins_regular"
						android:textSize="14sp"
						android:textColor="@color/settings_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="19dp"
						android:layout_width="88.67dp"
						android:layout_height="31dp"
						android:text="@string/drake_ek2_string"
						 />

					<ImageView android:id="@+id/darklane2"
						android:src="@drawable/darklane2"
						android:contentDescription="darklane2"
						 android:layout_marginStart="287.9dp"
						android:layout_marginTop="0dp"
						android:layout_width="46.1dp"
						android:layout_height="38dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/component_5"
					android:layout_marginTop="772dp"
					android:layout_marginStart="30dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/chicago_freestyle___drake_ek3"
						android:fontFamily="@font/poppins_bold"
						android:textStyle="bold"
						android:textSize="18sp"
						android:textColor="@color/settings_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="268.89dp"
						android:layout_height="40dp"
						android:text="@string/chicago_freestyle___drake_ek3_string"
						 />

					<TextView android:id="@+id/drake_ek3"
						android:fontFamily="@font/poppins_regular"
						android:textSize="14sp"
						android:textColor="@color/settings_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="19dp"
						android:layout_width="88.67dp"
						android:layout_height="31dp"
						android:text="@string/drake_ek3_string"
						 />

					<ImageView android:id="@+id/darklane"
						android:src="@drawable/darklane"
						android:contentDescription="darklane"
						 android:layout_marginStart="287.9dp"
						android:layout_marginTop="0dp"
						android:layout_width="46.1dp"
						android:layout_height="38dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/search_ek1"
					android:layout_marginTop="97dp"
					android:layout_marginStart="32dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/vector_ek10"
						android:src="@drawable/vector_ek10"
						android:contentDescription="vector_ek10"
						 android:layout_marginStart="3.5dp"
						android:layout_marginTop="3.5dp"
						android:layout_width="18.67dp"
						android:layout_height="18.67dp" />

					<ImageView android:id="@+id/vector_ek11"
						android:src="@drawable/vector_ek11"
						android:contentDescription="vector_ek11"
						 android:layout_marginStart="19.43dp"
						android:layout_marginTop="19.42dp"
						android:layout_width="5.07dp"
						android:layout_height="5.08dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/liked_playlist"
					android:layout_marginTop="250dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout android:id="@+id/frame_11"
						android:layout_marginTop="54dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<ImageView android:id="@+id/aura"
							android:src="@drawable/aura"
							android:contentDescription="aura"
							 android:layout_marginStart="11dp"
							android:layout_marginTop="0dp"
							android:layout_width="143dp"
							android:layout_height="169dp" />

						<ImageView android:id="@+id/oasis"
							android:src="@drawable/oasis"
							android:contentDescription="oasis"
							 android:layout_marginStart="167dp"
							android:layout_marginTop="0dp"
							android:layout_width="143dp"
							android:layout_height="169dp" />

						<ImageView android:id="@+id/sap"
							android:src="@drawable/sap"
							android:contentDescription="sap"
							 android:layout_marginStart="323dp"
							android:layout_marginTop="0dp"
							android:layout_width="143dp"
							android:layout_height="169dp" />

					</RelativeLayout>

					<TextView android:id="@+id/liked_playlist_ek1"
						android:fontFamily="@font/poppins_bold"
						android:textStyle="bold"
						android:textSize="18sp"
						android:textColor="@color/settings_color"
						android:layout_marginLeft="20dp"
						android:layout_marginTop="0dp"
						android:layout_width="154dp"
						android:layout_height="67dp"
						android:text="@string/liked_playlist_ek1_string"
						 />

				</RelativeLayout>

				<EditText android:id="@+id/find_in_liked_songs"
					android:fontFamily="@font/poppins_regular"
					android:textSize="16sp"
					android:textColor="@color/settings_color"
					android:layout_marginLeft="70dp"
					android:layout_marginTop="90dp"
					android:layout_width="300dp"
					android:layout_height="wrap_content"
					android:text="@string/find_in_liked_songs_string"
					 />

				<View   android:id="@+id/search_bar"
					android:background="@drawable/search_bar_shape"
					 android:alpha="0.10000000149012"
					 android:layout_marginStart="22dp"
					android:layout_marginTop="92dp"
					android:layout_width="350dp"
					android:layout_height="40dp" />




			</RelativeLayout>


		</RelativeLayout>

	</ScrollView>

	<com.google.android.material.bottomnavigation.BottomNavigationView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@id/navbar"
		android:background="@drawable/nav_rectangle_bg4_shape"

		app:itemTextColor="@drawable/selector"
		app:itemIconTint="@drawable/selector"
		app:menu="@menu/menu_navigation"
		android:layout_alignParentBottom="true"/>
</RelativeLayout>